--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!--Nav bar -->
     <nav></nav>
     <div style="text-align: center;">
-        <img src="content/roadrunner_spotlight_jakoby.jpg" alt="" class="image-responsive hide-mobile" />
+        <img src="content/roadrunner_spotlight_jakoby.jpg" alt="Image Not Found" class="image-responsive hide-mobile" />
     </div>
     <div style="text-align: center;">
-        <img src="content/jakoby1.jpg" alt="" class="image-responsive show-mobile"/>
+        <img src="content/jakoby1.jpg" alt="Image Not Found" class="image-responsive show-mobile"/>
     </div>
     
     <!-- Content -->
