--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="css/master.css"/>
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+    <link rel="icon" href="content/favicon.png" type="image/x-icon">
     <title>Chad Jakoby</title>
 </head>
 <body class="theme-background">
