--- a/projects.html
+++ b/projects.html
@@ -58,28 +58,32 @@
 <script src="js/layout.js" type="text/javascript"></script>
 
 <script>
-    function format(data) {
-        if (data.length > 0) {
-            var templateString = $('#repo').html();
-            
-            $.each(data, function ()
-            {
-                var template = templateString;
-                template = template.replace("@repo", this.name);
-                template = template.replace("@description", this.description);
-                template = template.replace("@language", this.language);
-                template = template.replace("@html_url", this.html_url);
-                template = template.replace("@wiki_url", this.html_url + "/wiki");
-
-                $('#repos').append(template);
-            });
-        }
-    }
-
     $(document).ready(function ()
      {
-        loadLayout(function() { setActive('#navProjects'); });
+         var layout = new Layout();
+        layout.load(function() { layout.setActive('#navProjects'); });
 
-        getRepos("jakobyc", format);
+        var github = new GitHub();
+        github.getRepos("jakobyc", format);
+
+        function format(data)
+        {
+            if (data.length > 0) 
+            {
+                var templateString = $('#repo').html();
+                
+                $.each(data, function ()
+                {
+                    var template = templateString;
+                    template = template.replace("@repo", this.name);
+                    template = template.replace("@description", this.description);
+                    template = template.replace("@language", this.language);
+                    template = template.replace("@html_url", this.html_url);
+                    template = template.replace("@wiki_url", this.html_url + "/wiki");
+
+                    $('#repos').append(template);
+                });
+            }
+        }
     });
 </script>
